# pulsainalam

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  buttons.jsonc  pulsainalam.code-workspace  sdkconfig  todo.txt
components/libesphttpd/: CMakeLists.txt  Kconfig  README.md  component.mk
components/libesphttpd/core/: auth.c  base64.c  httpd-espfs.c  httpd-freertos.c  httpd.c  httpdespfs.c
components/libesphttpd/espfs/: espfs.c
components/libesphttpd/include/libesphttpd/: cgiflash.h  cgiwifi.h  esp.h  esp32_httpd_vfs.h  httpd-freertos.h  httpd.h  platform.h  webpages-espfs.h
components/libesphttpd/util/: captdns.c  cgiflash.c  cgiwebsocket.c  cgiwifi.c  esp32_flash.c  esp32_httpd_vfs.c
espfs/: config.tpl  flash.tpl
html/: config.tpl  index.tpl
main/: CMakeLists.txt  cgi.c  cgi.h  component.mk  local_http_lib.c  local_http_lib.h  ota.c  parsed_url.c  pulsa_inalam.c  pulsa_inalam.h  rf_driver.c  rf_driver.h
